<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#E8F3FF">

    <TextView
        android:id="@+id/tvExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="growth points"
        android:textColor="#6B3A2E"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/barExpGray"
        android:layout_width="120dp"
        android:layout_height="10dp"
        android:background="@drawable/temperature_gradient"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/tvExp"
        app:layout_constraintTop_toBottomOf="@id/tvExp">

        <View
            android:id="@+id/barExp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDDDDD"
            android:layout_gravity="right"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="energy"
        android:textColor="#6B3A2E"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barExpGray" />

    <FrameLayout
        android:id="@+id/barEnergyGray"
        android:layout_width="120dp"
        android:layout_height="10dp"
       android:background="@drawable/temperature_gradient"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/tvEnergy"
        app:layout_constraintTop_toBottomOf="@id/tvEnergy">

        <View
            android:id="@+id/barEnergy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDDDDD"
            android:layout_gravity="right"
             />
    </FrameLayout>

    <TextView
        android:id="@+id/tvHunger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hunger"
        android:textColor="#6B3A2E"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/tvEnergy"
        app:layout_constraintTop_toBottomOf="@id/barEnergyGray" />

    <FrameLayout
        android:id="@+id/barHungerGray"
        android:layout_width="120dp"
        android:layout_height="10dp"
       android:background="@drawable/temperature_gradient"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/tvHunger"
        app:layout_constraintTop_toBottomOf="@id/tvHunger">

        <View
            android:id="@+id/barHunger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDDDDD"
            android:layout_gravity="right"
             />
    </FrameLayout>

    <TextView
        android:id="@+id/tvHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="happiness"
        android:textColor="#6B3A2E"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/tvHunger"
        app:layout_constraintTop_toBottomOf="@id/barHungerGray" />

    <FrameLayout
        android:id="@+id/barHappinessGray"
        android:layout_width="120dp"
        android:layout_height="10dp"
        android:background="@drawable/temperature_gradient"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/tvHappiness"
        app:layout_constraintTop_toBottomOf="@id/tvHappiness">

        <View
            android:id="@+id/barHappiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDDDDD"
            android:layout_gravity="right"
            />
    </FrameLayout>

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/bg_square_light"
        android:contentDescription="settings"
        android:scaleType="centerCrop"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnJournal"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_square_light"
        android:contentDescription="journal"
        app:srcCompat="@drawable/ic_book"
        app:tint="#000000"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSettings" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/petOvalTopGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <View
        android:id="@+id/ground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#394C3F"
        app:layout_constraintTop_toBottomOf="@id/petOvalTopGuide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivPetOval"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:background="@drawable/bg_oval_light"
        android:scaleType="centerInside"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toTopOf="@id/ground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivPetOval2"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/bg_oval_light"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFeed"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Feed"
        android:textColor="#000000"
        app:backgroundTint="#E69758"
        app:cornerRadius="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintBottom_toTopOf="@id/btnSleep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSleep"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Sleepy time!"
        android:textColor="#000000"
        app:backgroundTint="#E69758"
        app:cornerRadius="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnFeed"
        app:layout_constraintBottom_toTopOf="@id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Play"
        android:textColor="#000000"
        app:backgroundTint="#E69758"
        app:cornerRadius="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnSleep"
        app:layout_constraintBottom_toTopOf="@id/btnChat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChat"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="I want to chat!"
        android:textColor="#000000"
        app:backgroundTint="#E69758"
        app:cornerRadius="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:layout_constraintBottom_toBottomOf="@id/ground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/lowFood"
        android:background="@drawable/food_option"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/mushroom"
        app:layout_constraintBottom_toBottomOf="@id/ground"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintEnd_toStartOf="@id/midFood"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/midFood"
        android:background="@drawable/food_option"
        android:visibility="gone"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/berries"
        app:layout_constraintBottom_toBottomOf="@id/ground"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintStart_toEndOf="@id/lowFood"
        app:layout_constraintEnd_toStartOf="@id/highFood"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/highFood"
        android:background="@drawable/food_option"
        android:visibility="gone"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/salmon"
        app:layout_constraintBottom_toBottomOf="@id/ground"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintStart_toEndOf="@id/midFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
